--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : 
   pronouns         : # example: "she/her"  
   bio              : ""
-  location         : "Earth"
+  location         : "Oxford, UK"
   employer         : "PhD, Kyoto University"
   uri              : # URL
   email            : "yijun.yu.6@outlook.com" 
